Fixed overlay for readable text on case

--- a/src/stylesheets/case.css
+++ b/src/stylesheets/case.css
@@ -48,11 +48,14 @@ article .content {
     z-index: 1;
     opacity: 0;
     visibility: hidden;
-    padding: 100px 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
     display: flex;
-    /* align-items: center; */
     gap: 14px;
-    background: linear-gradient(to bottom, rgb(0 0 0 / 0%), rgb(0 0 0 / 100%));
+    background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
+    ); /* Semi-transparent black overlay */
     transition: 0.25s;
     flex-direction: column;
     text-align: center;
